--- a/SCVP2/ingreso/templates/ingreso_administrador.html
+++ b/SCVP2/ingreso/templates/ingreso_administrador.html
@@ -37,8 +37,10 @@
                                     <div class="card-header justify-content-center"><h3 class="fw-light my-4">Ingresar</h3></div>
                                     <div class="card-body">
                                         <!-- Inicio de sesion formulario-->
-                                  <form method="post" action="{% url 'inicio_sesion' %}">
-                                    {% csrf_token %}
+                                  <form method="post" action="{% url 'modulo_administrador' %}">
+                                        {% csrf_token %}
+                                        {{ warning }}
+                                        {{ error }}
                                     <div class="mb-3">
                                         <label class="small mb-1" for="numeroEmpleado">Número de empleado</label>
                                         <input class="form-control" id="numeroEmpleado" name="numero_empleado" type="text" required placeholder="Introduce tu número de empleado" />
@@ -55,7 +57,7 @@
                                         </div>
                                     </div>
                                     <div class="d-flex align-items-center justify-content-between mt-4 mb-0">
-                                        <a class="small" href="{% url 'recuperar_contrasena' %}">¿Olvidaste tu contraseña?</a>
+                                        <a class="small" href="#">¿Olvidaste tu contraseña?</a>
                                         <button class="btn btn-primary" type="submit">Iniciar Sesión</button>
                                     </div>
                                 </form>
