--- a/SCVP2/lider/templates/registro/registro_de_lideres_y_operadores.html
+++ b/SCVP2/lider/templates/registro/registro_de_lideres_y_operadores.html
@@ -16,16 +16,17 @@
     <body>
                     <div class="container-xl px-4">
                         <div class="row justify-content-center">
-                            <div class="col-lg-5">
+                            <div class="col-md-10">
                                 <div class="card shadow-lg border-0 rounded-lg mt-5">
-                                    <div class="card-header justify-content-center"><h3 class="fw-light my-4">Registro</h3></div>
+                                    <div class="card-header text-center">
+                                        <h3 class="fw-light my-4" style="font: -apple-system-body">Registro</h3></div>
                                     <div class="card-body">
                                         <!-- Django Form -->
                                         <div action="{% url 'registro_de_lideres_y_operadores' %}" method="post">
                                             {% csrf_token %}
-
+                                            <div class="form-group">
                                             <!-- Form Group (nombre) -->
-                                            <div class="mb-3">
+                                            <div class=" mb-3">
                                                 <label class="small mb-1" for="nombre">Nombre:</label>
                                                 <input class="form-control" type="text" id="nombre" name="nombre" placeholder="Introduce el nombre completo" required>
                                             </div>
@@ -35,14 +36,14 @@
                                                 <label class="small mb-1" for="numero_empleado">Número de empleado:</label>
                                                 <input class="form-control" type="text" id="numero_empleado" name="numero_empleado" placeholder="Introduce el numero de empleado" required>
                                             </div>
-                                            <!-- Form Group (empresa) -->
-                                        <div class="mb-3">
-                                            <label class="small mb-1" for="empresa">Empresa:</label>
-                                            <select class="form-control" id="empresa" name="empresa" required>
-                                                <option value="">Selecciona la empresa</option>
-                                                <option value="empresa1">Empresa 1</option>
-                                            </select>
-                                        </div>
+                                                <!-- Form Group (empresa) -->
+                                            <div class="mb-3">
+                                                <label class="small mb-1" for="empresa">Empresa:</label>
+                                                <select class="form-control" id="empresa" name="empresa" required>
+                                                    <option value="">Selecciona la empresa</option>
+                                                    <option value="empresa1">Empresa 1</option>
+                                                </select>
+                                            </div>
 
 
                                               <!-- Form Group (tipo_empleado) -->
@@ -55,8 +56,8 @@
                                                 </select>
                                             </div>
 
-
-                                              <div class="col-lg-5">
+                                            </div>
+                                            <div class="form-group">
 
                                                     <!-- Form Group (grupo) -->
                                                     <div class="mb-3">
@@ -85,16 +86,14 @@
                                                             <label class="small mb-1" for="password_repeat">Confirma la Contraseña:</label>
                                                             <div class="input-group">
                                                                 <input class="form-control" type="password" id="password_repeat" name="password_repeat" required>
-                                                                <div class="input-group-append">
-
-                                                                </div>
-                                                            </div>
                                                         </div>
                                             <div class="d-flex align-items-center justify-content-between mt-4 mb-0">
                                                 <a class="btn btn-secondary btn-red" href="{% url 'modulo_lider' %}">Cancelar</a>
                                             <input class="btn btn-primary" type="submit" value="Registrar">
                                             </div>
-                                                      </div>
+                                            </div>
+                                            </div>
+
                                         </form>
 
                                         <!-- End Django Form -->
